--- a/WirelessGUI/WebContent/login.html
+++ b/WirelessGUI/WebContent/login.html
@@ -33,7 +33,7 @@
 
     <div class="container">
 
-      <form class="login-form" action="rep_login">        
+      <form class="login-form" method="post"action="rep_login">        
         <div class="login-wrap">
             <p class="login-img"><i class="icon_lock_alt"></i></p>
             <div class="input-group">
