--- a/WirelessGUI/WebContent/loginerror.html
+++ b/WirelessGUI/WebContent/loginerror.html
@@ -33,7 +33,7 @@
 
     <div class="container">
 
-      <form class="login-form" action="rep_login">        
+      <form class="login-form" action="rep_login" method="post">        
         <div class="login-wrap">
             <p class="login-img"><i class="icon_lock_alt"></i></p>
             <div class="input-group">
