--- a/WirelessGUI/WebContent/order_status.html
+++ b/WirelessGUI/WebContent/order_status.html
@@ -1,6 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -43,7 +41,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo"> <span class="lite"><img alt="" src="img/t15.png"></span></a>
+            <a href="index.html" class="logo"> <span class="lite"><img alt="" src="img/t15.jpg"></span></a>
             <!--logo end-->
             		   <div class="top-nav notification-row">
                     <!-- user login dropdown start-->
@@ -72,18 +70,18 @@
       </header>      
       <!--header end-->
       <!--main content start-->
-          <section class="wrapper"><br>
+          <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa fa-bars"></i> Order Status</h3>
+					<h3 class="page-header"><i class="fa fa fa-bars"></i> Order Confirmation</h3>
 					<ol class="breadcrumb">
 						<li><i class="fa fa-home"></i><a href="index.jsp">Home</a></li>
-						<li><i class="fa fa-square-o"></i>Order Status</li>
+						<li><i class="fa fa-square-o"></i>Order Confirmation</li>
 					</ol>
 				</div>
 			</div>
               <!-- page start-->
-              <form class="form-validate form-horizontal " id="register_form" method="" action="index.jsp">
+              <form class="form-validate form-horizontal " id="register_form" method="post" action="">
               	<div class="form-group ">
               		<label for="custid" class="control-label col-lg-2">Customer ID </label>
               	</div>
@@ -106,8 +104,8 @@
               		<label for="status" class="control-label col-lg-2">Status </label>
               	</div>
               	<div class="form-group">
-                	<div align="center">                                             
-                    	<button type="submit" class="btn btn-primary">ok</button>
+                	<div align="right">                                             
+                    	<a href="index.jsp" ><img src="img/checkout.png" onmouseover="this.src='img/checkout.png'" onmouseout="this.src='img/checkoutunclicked.png'" width="300px"height="100px"/></a>
                     </div>
                 </div>                
               </form>
